force-app/main/default/objects/Referencia_Cruzada__c/Referencia_Cruzada__c.object-meta.xml
<CustomObject>
    <label>Referencia Cruzada</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Nro de Referencia Cruzada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referencias Cruzadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>