force-app/main/default/objects/Referencia_Cruzada__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Clientes__c</referenceTo>
    <relationshipLabel>Referencias Cruzadas</relationshipLabel>
    <relationshipName>Referencias_Cruzadas</relationshipName>
    <type>Lookup</type>
</CustomField>