force-app/main/default/objects/Referencia_Cruzada__c/fields/CUSTOMER_ITEM_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_ITEM_NUMBER__c</fullName>
    <label>Número de item de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>