force-app/main/default/objects/Referencia_Cruzada__c/fields/CUSTOMER_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NAME__c</fullName>
    <label>Nombre de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>