force-app/main/default/objects/Referencia_Cruzada__c/fields/CUSTOMER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NUMBER__c</fullName>
    <label>Número de cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>