force-app/main/default/objects/Referencia_Cruzada__c/fields/INVENTORY_ITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>INVENTORY_ITEM_ID__c</fullName>
    <label>Id de item de inventario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>