force-app/main/default/objects/Referencia_Cruzada__c/fields/ITEM_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ITEM_NUMBER__c</fullName>
    <label>Número de Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>