force-app/main/default/objects/Referencia_Cruzada__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Referencias Cruzadas</relationshipLabel>
    <relationshipName>Referencias_Cruzadas</relationshipName>
    <type>Lookup</type>
</CustomField>