force-app/main/default/objects/Referencia_Cruzada__c/fields/WAREHOUSE_ID__c.field-meta.xml
<CustomField>
    <fullName>WAREHOUSE_ID__c</fullName>
    <label>Id de Depósito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>